# chen-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  README_EN.md  __init__.py  agent_loop.py  ai_core.py  cache_optimizer.py  config.py  context_manager.py  hooks.py  main.py  mcp_server.py  memory.py  prompt_compressor.py  providers.json  pyproject.toml  requirements.txt  resilience.py  run.bat  run.ps1  skills.py  telemetry.py  tests.py  tools.py  utils.py  web_ui.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: README.md  basic_chat.py  multi_provider.py  skills_demo.py
