[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chen-ai"
version = "1.0.1"
description = "一个功能强大的多模型 AI 智能助手，支持多种大语言模型提供商，内置记忆系统、技能系统、工具调用和 MCP 服务器。"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Futao-Augenstern" }
]
keywords = ["ai", "agent", "llm", "chatbot", "openai", "mcp", "skills", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
]
web = [
    "gradio>=4.0.0",
]
ui = [
    "rich>=13.0.0",
]
data = [
    "pydantic>=2.0.0",
]
token = [
    "tiktoken>=0.5.0",
]
vector = [
    "numpy>=1.24.0",
]
full = [
    "openai>=1.0.0",
    "gradio>=4.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
chen-ai = "main:main"

[tool.setuptools.packages.find]
include = ["*.py"]
exclude = ["tests.py", "test_*.py"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["tests.py", "test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"