[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chen-ai"
version = "1.0.2"
description = "安全、零依赖的多模型 AI 智能助手 — 支持 12 家 LLM、记忆系统、Agent、MCP Server、沙箱执行"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Futao-Augenstern" }
]
keywords = [
    "ai", "agent", "llm", "chatbot", "openai", "deepseek",
    "mcp", "skills", "rag", "sandbox", "multi-agent",
    "ai-assistant", "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Futao-Augenstern/chen-ai"
Documentation = "https://github.com/Futao-Augenstern/chen-ai#readme"
Repository = "https://github.com/Futao-Augenstern/chen-ai.git"
Issues = "https://github.com/Futao-Augenstern/chen-ai/issues"
Changelog = "https://github.com/Futao-Augenstern/chen-ai/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
]
web = [
    "gradio>=4.0.0",
]
ui = [
    "rich>=13.0.0",
]
data = [
    "pydantic>=2.0.0",
]
token = [
    "tiktoken>=0.5.0",
]
vector = [
    "numpy>=1.24.0",
]
full = [
    "openai>=1.0.0",
    "gradio>=4.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
chen-ai = "main:main"

[tool.setuptools.packages.find]
include = ["*.py"]
exclude = ["tests.py", "test_*.py"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["tests.py", "test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"